parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> ins_print
Rule 5     instruccion -> ins_println
Rule 6     instruccion -> ins_if
Rule 7     instruccion -> ins_break
Rule 8     instruccion -> ins_continue
Rule 9     instruccion -> ins_while
Rule 10    instruccion -> ins_asignacion
Rule 11    instruccion -> ins_decla_funcion
Rule 12    instruccion -> ins_llamada_funcion PTOCOMA
Rule 13    instruccion -> COMENTARIO_VARIAS_LINEAS
Rule 14    instruccion -> COMENTARIO_SIMPLE
Rule 15    ins_llamada_funcion -> ID PAROP PARCLS
Rule 16    ins_llamada_funcion -> ID PAROP params_call PARCLS
Rule 17    params_call -> params_call COMA param_call
Rule 18    params_call -> param_call
Rule 19    param_call -> expresion
Rule 20    ins_decla_funcion -> TK_FUNCTION ID PAROP PARCLS instrucciones TK_END PTOCOMA
Rule 21    ins_decla_funcion -> TK_FUNCTION ID PAROP params PARCLS instrucciones TK_END PTOCOMA
Rule 22    params -> params COMA param
Rule 23    params -> param
Rule 24    param -> ID DOBLEPUNTO tipos_ins
Rule 25    param -> ID
Rule 26    ins_continue -> TK_CONTINUE PTOCOMA
Rule 27    ins_break -> TK_BREAK PTOCOMA
Rule 28    ins_while -> TK_WHILE expresion instrucciones TK_END PTOCOMA
Rule 29    ins_if -> TK_IF expresion instrucciones TK_END PTOCOMA
Rule 30    ins_if -> TK_IF expresion instrucciones TK_ELSE instrucciones TK_END PTOCOMA
Rule 31    ins_if -> TK_IF expresion instrucciones ins_elseif TK_END PTOCOMA
Rule 32    ins_elseif -> TK_ELSEIF expresion instrucciones
Rule 33    ins_elseif -> TK_ELSEIF expresion instrucciones ins_elseif
Rule 34    ins_elseif -> TK_ELSEIF expresion instrucciones TK_ELSE instrucciones
Rule 35    ins_asignacion -> ID IGUAL expresion PTOCOMA
Rule 36    ins_asignacion -> ID IGUAL expresion DOBLEPUNTO tipos_ins PTOCOMA
Rule 37    tipos_ins -> TK_INT64
Rule 38    tipos_ins -> TK_FLOAT64
Rule 39    tipos_ins -> TK_CHAR
Rule 40    tipos_ins -> TK_STRING
Rule 41    tipos_ins -> TK_BOOL
Rule 42    ins_print -> TK_PRINT PAROP expresion PARCLS PTOCOMA
Rule 43    ins_println -> TK_PRINTLN PAROP expresion PARCLS PTOCOMA
Rule 44    expresion -> expresion MAS expresion
Rule 45    expresion -> expresion MENOS expresion
Rule 46    expresion -> expresion POR expresion
Rule 47    expresion -> expresion DIV expresion
Rule 48    expresion -> expresion POT expresion
Rule 49    expresion -> expresion MOD expresion
Rule 50    expresion -> expresion MENQ expresion
Rule 51    expresion -> expresion MENEQUALS expresion
Rule 52    expresion -> expresion MAYQ expresion
Rule 53    expresion -> expresion MAYEQUALS expresion
Rule 54    expresion -> expresion IGUALDAD expresion
Rule 55    expresion -> expresion DIFERENCIA expresion
Rule 56    expresion -> expresion AND expresion
Rule 57    expresion -> expresion OR expresion
Rule 58    expresion -> expresion COMA expresion
Rule 59    expresion -> MENOS expresion
Rule 60    expresion -> NOT expresion
Rule 61    expresion -> PAROP expresion PARCLS
Rule 62    expresion -> ENTERO
Rule 63    expresion -> TK_TRUE
Rule 64    expresion -> TK_FALSE
Rule 65    expresion -> DECIMAL
Rule 66    expresion -> ID
Rule 67    expresion -> CADENA
Rule 68    expresion -> CHAR

Terminals, with rules where they appear

AND                  : 56
CADENA               : 67
CHAR                 : 68
COMA                 : 17 22 58
COMENTARIO_SIMPLE    : 14
COMENTARIO_VARIAS_LINEAS : 13
DECIMAL              : 65
DIFERENCIA           : 55
DIV                  : 47
DOBLEPUNTO           : 24 36
ENTERO               : 62
ID                   : 15 16 20 21 24 25 35 36 66
IGUAL                : 35 36
IGUALDAD             : 54
MAS                  : 44
MAYEQUALS            : 53
MAYQ                 : 52
MENEQUALS            : 51
MENOS                : 45 59
MENQ                 : 50
MOD                  : 49
NOT                  : 60
OR                   : 57
PARCLS               : 15 16 20 21 42 43 61
PAROP                : 15 16 20 21 42 43 61
POR                  : 46
POT                  : 48
PTOCOMA              : 12 20 21 26 27 28 29 30 31 35 36 42 43
TK_BOOL              : 41
TK_BREAK             : 27
TK_CHAR              : 39
TK_CONTINUE          : 26
TK_ELSE              : 30 34
TK_ELSEIF            : 32 33 34
TK_END               : 20 21 28 29 30 31
TK_FALSE             : 64
TK_FLOAT64           : 38
TK_FUNCTION          : 20 21
TK_IF                : 29 30 31
TK_INT64             : 37
TK_PRINT             : 42
TK_PRINTLN           : 43
TK_STRING            : 40
TK_TRUE              : 63
TK_WHILE             : 28
error                : 

Nonterminals, with rules where they appear

expresion            : 19 28 29 30 31 32 33 34 35 36 42 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61
init                 : 0
ins_asignacion       : 10
ins_break            : 7
ins_continue         : 8
ins_decla_funcion    : 11
ins_elseif           : 31 33
ins_if               : 6
ins_llamada_funcion  : 12
ins_print            : 4
ins_println          : 5
ins_while            : 9
instruccion          : 2 3
instrucciones        : 1 2 20 21 28 29 30 30 31 32 33 34 34
param                : 22 23
param_call           : 17 18
params               : 21 22
params_call          : 16 17
tipos_ins            : 24 36

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . ins_print
    (5) instruccion -> . ins_println
    (6) instruccion -> . ins_if
    (7) instruccion -> . ins_break
    (8) instruccion -> . ins_continue
    (9) instruccion -> . ins_while
    (10) instruccion -> . ins_asignacion
    (11) instruccion -> . ins_decla_funcion
    (12) instruccion -> . ins_llamada_funcion PTOCOMA
    (13) instruccion -> . COMENTARIO_VARIAS_LINEAS
    (14) instruccion -> . COMENTARIO_SIMPLE
    (42) ins_print -> . TK_PRINT PAROP expresion PARCLS PTOCOMA
    (43) ins_println -> . TK_PRINTLN PAROP expresion PARCLS PTOCOMA
    (29) ins_if -> . TK_IF expresion instrucciones TK_END PTOCOMA
    (30) ins_if -> . TK_IF expresion instrucciones TK_ELSE instrucciones TK_END PTOCOMA
    (31) ins_if -> . TK_IF expresion instrucciones ins_elseif TK_END PTOCOMA
    (27) ins_break -> . TK_BREAK PTOCOMA
    (26) ins_continue -> . TK_CONTINUE PTOCOMA
    (28) ins_while -> . TK_WHILE expresion instrucciones TK_END PTOCOMA
    (35) ins_asignacion -> . ID IGUAL expresion PTOCOMA
    (36) ins_asignacion -> . ID IGUAL expresion DOBLEPUNTO tipos_ins PTOCOMA
    (20) ins_decla_funcion -> . TK_FUNCTION ID PAROP PARCLS instrucciones TK_END PTOCOMA
    (21) ins_decla_funcion -> . TK_FUNCTION ID PAROP params PARCLS instrucciones TK_END PTOCOMA
    (15) ins_llamada_funcion -> . ID PAROP PARCLS
    (16) ins_llamada_funcion -> . ID PAROP params_call PARCLS

    COMENTARIO_VARIAS_LINEAS shift and go to state 13
    COMENTARIO_SIMPLE shift and go to state 14
    TK_PRINT        shift and go to state 15
    TK_PRINTLN      shift and go to state 16
    TK_IF           shift and go to state 17
    TK_BREAK        shift and go to state 18
    TK_CONTINUE     shift and go to state 19
    TK_WHILE        shift and go to state 20
    ID              shift and go to state 21
    TK_FUNCTION     shift and go to state 22

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    ins_print                      shift and go to state 4
    ins_println                    shift and go to state 5
    ins_if                         shift and go to state 6
    ins_break                      shift and go to state 7
    ins_continue                   shift and go to state 8
    ins_while                      shift and go to state 9
    ins_asignacion                 shift and go to state 10
    ins_decla_funcion              shift and go to state 11
    ins_llamada_funcion            shift and go to state 12

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . ins_print
    (5) instruccion -> . ins_println
    (6) instruccion -> . ins_if
    (7) instruccion -> . ins_break
    (8) instruccion -> . ins_continue
    (9) instruccion -> . ins_while
    (10) instruccion -> . ins_asignacion
    (11) instruccion -> . ins_decla_funcion
    (12) instruccion -> . ins_llamada_funcion PTOCOMA
    (13) instruccion -> . COMENTARIO_VARIAS_LINEAS
    (14) instruccion -> . COMENTARIO_SIMPLE
    (42) ins_print -> . TK_PRINT PAROP expresion PARCLS PTOCOMA
    (43) ins_println -> . TK_PRINTLN PAROP expresion PARCLS PTOCOMA
    (29) ins_if -> . TK_IF expresion instrucciones TK_END PTOCOMA
    (30) ins_if -> . TK_IF expresion instrucciones TK_ELSE instrucciones TK_END PTOCOMA
    (31) ins_if -> . TK_IF expresion instrucciones ins_elseif TK_END PTOCOMA
    (27) ins_break -> . TK_BREAK PTOCOMA
    (26) ins_continue -> . TK_CONTINUE PTOCOMA
    (28) ins_while -> . TK_WHILE expresion instrucciones TK_END PTOCOMA
    (35) ins_asignacion -> . ID IGUAL expresion PTOCOMA
    (36) ins_asignacion -> . ID IGUAL expresion DOBLEPUNTO tipos_ins PTOCOMA
    (20) ins_decla_funcion -> . TK_FUNCTION ID PAROP PARCLS instrucciones TK_END PTOCOMA
    (21) ins_decla_funcion -> . TK_FUNCTION ID PAROP params PARCLS instrucciones TK_END PTOCOMA
    (15) ins_llamada_funcion -> . ID PAROP PARCLS
    (16) ins_llamada_funcion -> . ID PAROP params_call PARCLS

    $end            reduce using rule 1 (init -> instrucciones .)
    COMENTARIO_VARIAS_LINEAS shift and go to state 13
    COMENTARIO_SIMPLE shift and go to state 14
    TK_PRINT        shift and go to state 15
    TK_PRINTLN      shift and go to state 16
    TK_IF           shift and go to state 17
    TK_BREAK        shift and go to state 18
    TK_CONTINUE     shift and go to state 19
    TK_WHILE        shift and go to state 20
    ID              shift and go to state 21
    TK_FUNCTION     shift and go to state 22

    instruccion                    shift and go to state 23
    ins_print                      shift and go to state 4
    ins_println                    shift and go to state 5
    ins_if                         shift and go to state 6
    ins_break                      shift and go to state 7
    ins_continue                   shift and go to state 8
    ins_while                      shift and go to state 9
    ins_asignacion                 shift and go to state 10
    ins_decla_funcion              shift and go to state 11
    ins_llamada_funcion            shift and go to state 12

state 3

    (3) instrucciones -> instruccion .

    COMENTARIO_VARIAS_LINEAS reduce using rule 3 (instrucciones -> instruccion .)
    COMENTARIO_SIMPLE reduce using rule 3 (instrucciones -> instruccion .)
    TK_PRINT        reduce using rule 3 (instrucciones -> instruccion .)
    TK_PRINTLN      reduce using rule 3 (instrucciones -> instruccion .)
    TK_IF           reduce using rule 3 (instrucciones -> instruccion .)
    TK_BREAK        reduce using rule 3 (instrucciones -> instruccion .)
    TK_CONTINUE     reduce using rule 3 (instrucciones -> instruccion .)
    TK_WHILE        reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    TK_FUNCTION     reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    TK_END          reduce using rule 3 (instrucciones -> instruccion .)
    TK_ELSE         reduce using rule 3 (instrucciones -> instruccion .)
    TK_ELSEIF       reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> ins_print .

    COMENTARIO_VARIAS_LINEAS reduce using rule 4 (instruccion -> ins_print .)
    COMENTARIO_SIMPLE reduce using rule 4 (instruccion -> ins_print .)
    TK_PRINT        reduce using rule 4 (instruccion -> ins_print .)
    TK_PRINTLN      reduce using rule 4 (instruccion -> ins_print .)
    TK_IF           reduce using rule 4 (instruccion -> ins_print .)
    TK_BREAK        reduce using rule 4 (instruccion -> ins_print .)
    TK_CONTINUE     reduce using rule 4 (instruccion -> ins_print .)
    TK_WHILE        reduce using rule 4 (instruccion -> ins_print .)
    ID              reduce using rule 4 (instruccion -> ins_print .)
    TK_FUNCTION     reduce using rule 4 (instruccion -> ins_print .)
    $end            reduce using rule 4 (instruccion -> ins_print .)
    TK_END          reduce using rule 4 (instruccion -> ins_print .)
    TK_ELSE         reduce using rule 4 (instruccion -> ins_print .)
    TK_ELSEIF       reduce using rule 4 (instruccion -> ins_print .)


state 5

    (5) instruccion -> ins_println .

    COMENTARIO_VARIAS_LINEAS reduce using rule 5 (instruccion -> ins_println .)
    COMENTARIO_SIMPLE reduce using rule 5 (instruccion -> ins_println .)
    TK_PRINT        reduce using rule 5 (instruccion -> ins_println .)
    TK_PRINTLN      reduce using rule 5 (instruccion -> ins_println .)
    TK_IF           reduce using rule 5 (instruccion -> ins_println .)
    TK_BREAK        reduce using rule 5 (instruccion -> ins_println .)
    TK_CONTINUE     reduce using rule 5 (instruccion -> ins_println .)
    TK_WHILE        reduce using rule 5 (instruccion -> ins_println .)
    ID              reduce using rule 5 (instruccion -> ins_println .)
    TK_FUNCTION     reduce using rule 5 (instruccion -> ins_println .)
    $end            reduce using rule 5 (instruccion -> ins_println .)
    TK_END          reduce using rule 5 (instruccion -> ins_println .)
    TK_ELSE         reduce using rule 5 (instruccion -> ins_println .)
    TK_ELSEIF       reduce using rule 5 (instruccion -> ins_println .)


state 6

    (6) instruccion -> ins_if .

    COMENTARIO_VARIAS_LINEAS reduce using rule 6 (instruccion -> ins_if .)
    COMENTARIO_SIMPLE reduce using rule 6 (instruccion -> ins_if .)
    TK_PRINT        reduce using rule 6 (instruccion -> ins_if .)
    TK_PRINTLN      reduce using rule 6 (instruccion -> ins_if .)
    TK_IF           reduce using rule 6 (instruccion -> ins_if .)
    TK_BREAK        reduce using rule 6 (instruccion -> ins_if .)
    TK_CONTINUE     reduce using rule 6 (instruccion -> ins_if .)
    TK_WHILE        reduce using rule 6 (instruccion -> ins_if .)
    ID              reduce using rule 6 (instruccion -> ins_if .)
    TK_FUNCTION     reduce using rule 6 (instruccion -> ins_if .)
    $end            reduce using rule 6 (instruccion -> ins_if .)
    TK_END          reduce using rule 6 (instruccion -> ins_if .)
    TK_ELSE         reduce using rule 6 (instruccion -> ins_if .)
    TK_ELSEIF       reduce using rule 6 (instruccion -> ins_if .)


state 7

    (7) instruccion -> ins_break .

    COMENTARIO_VARIAS_LINEAS reduce using rule 7 (instruccion -> ins_break .)
    COMENTARIO_SIMPLE reduce using rule 7 (instruccion -> ins_break .)
    TK_PRINT        reduce using rule 7 (instruccion -> ins_break .)
    TK_PRINTLN      reduce using rule 7 (instruccion -> ins_break .)
    TK_IF           reduce using rule 7 (instruccion -> ins_break .)
    TK_BREAK        reduce using rule 7 (instruccion -> ins_break .)
    TK_CONTINUE     reduce using rule 7 (instruccion -> ins_break .)
    TK_WHILE        reduce using rule 7 (instruccion -> ins_break .)
    ID              reduce using rule 7 (instruccion -> ins_break .)
    TK_FUNCTION     reduce using rule 7 (instruccion -> ins_break .)
    $end            reduce using rule 7 (instruccion -> ins_break .)
    TK_END          reduce using rule 7 (instruccion -> ins_break .)
    TK_ELSE         reduce using rule 7 (instruccion -> ins_break .)
    TK_ELSEIF       reduce using rule 7 (instruccion -> ins_break .)


state 8

    (8) instruccion -> ins_continue .

    COMENTARIO_VARIAS_LINEAS reduce using rule 8 (instruccion -> ins_continue .)
    COMENTARIO_SIMPLE reduce using rule 8 (instruccion -> ins_continue .)
    TK_PRINT        reduce using rule 8 (instruccion -> ins_continue .)
    TK_PRINTLN      reduce using rule 8 (instruccion -> ins_continue .)
    TK_IF           reduce using rule 8 (instruccion -> ins_continue .)
    TK_BREAK        reduce using rule 8 (instruccion -> ins_continue .)
    TK_CONTINUE     reduce using rule 8 (instruccion -> ins_continue .)
    TK_WHILE        reduce using rule 8 (instruccion -> ins_continue .)
    ID              reduce using rule 8 (instruccion -> ins_continue .)
    TK_FUNCTION     reduce using rule 8 (instruccion -> ins_continue .)
    $end            reduce using rule 8 (instruccion -> ins_continue .)
    TK_END          reduce using rule 8 (instruccion -> ins_continue .)
    TK_ELSE         reduce using rule 8 (instruccion -> ins_continue .)
    TK_ELSEIF       reduce using rule 8 (instruccion -> ins_continue .)


state 9

    (9) instruccion -> ins_while .

    COMENTARIO_VARIAS_LINEAS reduce using rule 9 (instruccion -> ins_while .)
    COMENTARIO_SIMPLE reduce using rule 9 (instruccion -> ins_while .)
    TK_PRINT        reduce using rule 9 (instruccion -> ins_while .)
    TK_PRINTLN      reduce using rule 9 (instruccion -> ins_while .)
    TK_IF           reduce using rule 9 (instruccion -> ins_while .)
    TK_BREAK        reduce using rule 9 (instruccion -> ins_while .)
    TK_CONTINUE     reduce using rule 9 (instruccion -> ins_while .)
    TK_WHILE        reduce using rule 9 (instruccion -> ins_while .)
    ID              reduce using rule 9 (instruccion -> ins_while .)
    TK_FUNCTION     reduce using rule 9 (instruccion -> ins_while .)
    $end            reduce using rule 9 (instruccion -> ins_while .)
    TK_END          reduce using rule 9 (instruccion -> ins_while .)
    TK_ELSE         reduce using rule 9 (instruccion -> ins_while .)
    TK_ELSEIF       reduce using rule 9 (instruccion -> ins_while .)


state 10

    (10) instruccion -> ins_asignacion .

    COMENTARIO_VARIAS_LINEAS reduce using rule 10 (instruccion -> ins_asignacion .)
    COMENTARIO_SIMPLE reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_PRINT        reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_PRINTLN      reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_IF           reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_BREAK        reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_CONTINUE     reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_WHILE        reduce using rule 10 (instruccion -> ins_asignacion .)
    ID              reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_FUNCTION     reduce using rule 10 (instruccion -> ins_asignacion .)
    $end            reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_END          reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_ELSE         reduce using rule 10 (instruccion -> ins_asignacion .)
    TK_ELSEIF       reduce using rule 10 (instruccion -> ins_asignacion .)


state 11

    (11) instruccion -> ins_decla_funcion .

    COMENTARIO_VARIAS_LINEAS reduce using rule 11 (instruccion -> ins_decla_funcion .)
    COMENTARIO_SIMPLE reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_PRINT        reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_PRINTLN      reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_IF           reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_BREAK        reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_CONTINUE     reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_WHILE        reduce using rule 11 (instruccion -> ins_decla_funcion .)
    ID              reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_FUNCTION     reduce using rule 11 (instruccion -> ins_decla_funcion .)
    $end            reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_END          reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_ELSE         reduce using rule 11 (instruccion -> ins_decla_funcion .)
    TK_ELSEIF       reduce using rule 11 (instruccion -> ins_decla_funcion .)


state 12

    (12) instruccion -> ins_llamada_funcion . PTOCOMA

    PTOCOMA         shift and go to state 24


state 13

    (13) instruccion -> COMENTARIO_VARIAS_LINEAS .

    COMENTARIO_VARIAS_LINEAS reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    COMENTARIO_SIMPLE reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_PRINT        reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_PRINTLN      reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_IF           reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_BREAK        reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_CONTINUE     reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_WHILE        reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    ID              reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_FUNCTION     reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    $end            reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_END          reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_ELSE         reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)
    TK_ELSEIF       reduce using rule 13 (instruccion -> COMENTARIO_VARIAS_LINEAS .)


state 14

    (14) instruccion -> COMENTARIO_SIMPLE .

    COMENTARIO_VARIAS_LINEAS reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    COMENTARIO_SIMPLE reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_PRINT        reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_PRINTLN      reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_IF           reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_BREAK        reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_CONTINUE     reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_WHILE        reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    ID              reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_FUNCTION     reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    $end            reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_END          reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_ELSE         reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)
    TK_ELSEIF       reduce using rule 14 (instruccion -> COMENTARIO_SIMPLE .)


state 15

    (42) ins_print -> TK_PRINT . PAROP expresion PARCLS PTOCOMA

    PAROP           shift and go to state 25


state 16

    (43) ins_println -> TK_PRINTLN . PAROP expresion PARCLS PTOCOMA

    PAROP           shift and go to state 26


state 17

    (29) ins_if -> TK_IF . expresion instrucciones TK_END PTOCOMA
    (30) ins_if -> TK_IF . expresion instrucciones TK_ELSE instrucciones TK_END PTOCOMA
    (31) ins_if -> TK_IF . expresion instrucciones ins_elseif TK_END PTOCOMA
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion POR expresion
    (47) expresion -> . expresion DIV expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . expresion MENQ expresion
    (51) expresion -> . expresion MENEQUALS expresion
    (52) expresion -> . expresion MAYQ expresion
    (53) expresion -> . expresion MAYEQUALS expresion
    (54) expresion -> . expresion IGUALDAD expresion
    (55) expresion -> . expresion DIFERENCIA expresion
    (56) expresion -> . expresion AND expresion
    (57) expresion -> . expresion OR expresion
    (58) expresion -> . expresion COMA expresion
    (59) expresion -> . MENOS expresion
    (60) expresion -> . NOT expresion
    (61) expresion -> . PAROP expresion PARCLS
    (62) expresion -> . ENTERO
    (63) expresion -> . TK_TRUE
    (64) expresion -> . TK_FALSE
    (65) expresion -> . DECIMAL
    (66) expresion -> . ID
    (67) expresion -> . CADENA
    (68) expresion -> . CHAR

    MENOS           shift and go to state 28
    NOT             shift and go to state 29
    PAROP           shift and go to state 30
    ENTERO          shift and go to state 31
    TK_TRUE         shift and go to state 32
    TK_FALSE        shift and go to state 33
    DECIMAL         shift and go to state 34
    ID              shift and go to state 35
    CADENA          shift and go to state 36
    CHAR            shift and go to state 37

    expresion                      shift and go to state 27

state 18

    (27) ins_break -> TK_BREAK . PTOCOMA

    PTOCOMA         shift and go to state 38


state 19

    (26) ins_continue -> TK_CONTINUE . PTOCOMA

    PTOCOMA         shift and go to state 39


state 20

    (28) ins_while -> TK_WHILE . expresion instrucciones TK_END PTOCOMA
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion POR expresion
    (47) expresion -> . expresion DIV expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . expresion MENQ expresion
    (51) expresion -> . expresion MENEQUALS expresion
    (52) expresion -> . expresion MAYQ expresion
    (53) expresion -> . expresion MAYEQUALS expresion
    (54) expresion -> . expresion IGUALDAD expresion
    (55) expresion -> . expresion DIFERENCIA expresion
    (56) expresion -> . expresion AND expresion
    (57) expresion -> . expresion OR expresion
    (58) expresion -> . expresion COMA expresion
    (59) expresion -> . MENOS expresion
    (60) expresion -> . NOT expresion
    (61) expresion -> . PAROP expresion PARCLS
    (62) expresion -> . ENTERO
    (63) expresion -> . TK_TRUE
    (64) expresion -> . TK_FALSE
    (65) expresion -> . DECIMAL
    (66) expresion -> . ID
    (67) expresion -> . CADENA
    (68) expresion -> . CHAR

    MENOS           shift and go to state 28
    NOT             shift and go to state 29
    PAROP           shift and go to state 30
    ENTERO          shift and go to state 31
    TK_TRUE         shift and go to state 32
    TK_FALSE        shift and go to state 33
    DECIMAL         shift and go to state 34
    ID              shift and go to state 35
    CADENA          shift and go to state 36
    CHAR            shift and go to state 37

    expresion                      shift and go to state 40

state 21

    (35) ins_asignacion -> ID . IGUAL expresion PTOCOMA
    (36) ins_asignacion -> ID . IGUAL expresion DOBLEPUNTO tipos_ins PTOCOMA
    (15) ins_llamada_funcion -> ID . PAROP PARCLS
    (16) ins_llamada_funcion -> ID . PAROP params_call PARCLS

    IGUAL           shift and go to state 41
    PAROP           shift and go to state 42


state 22

    (20) ins_decla_funcion -> TK_FUNCTION . ID PAROP PARCLS instrucciones TK_END PTOCOMA
    (21) ins_decla_funcion -> TK_FUNCTION . ID PAROP params PARCLS instrucciones TK_END PTOCOMA

    ID              shift and go to state 43


state 23

    (2) instrucciones -> instrucciones instruccion .

    COMENTARIO_VARIAS_LINEAS reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    COMENTARIO_SIMPLE reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_PRINT        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_PRINTLN      reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_IF           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_BREAK        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_CONTINUE     reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_WHILE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_FUNCTION     reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_END          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_ELSE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TK_ELSEIF       reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 24

    (12) instruccion -> ins_llamada_funcion PTOCOMA .

    COMENTARIO_VARIAS_LINEAS reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    COMENTARIO_SIMPLE reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_PRINT        reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_PRINTLN      reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_IF           reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_BREAK        reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_CONTINUE     reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_WHILE        reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    ID              reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_FUNCTION     reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    $end            reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_END          reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_ELSE         reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)
    TK_ELSEIF       reduce using rule 12 (instruccion -> ins_llamada_funcion PTOCOMA .)


state 25

    (42) ins_print -> TK_PRINT PAROP . expresion PARCLS PTOCOMA
    (44) expresion -> . expresion MAS expresion
    (45) expresion -> . expresion MENOS expresion
    (46) expresion -> . expresion POR expresion
    (47) expresion -> . expresion DIV expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . expresion MENQ expresion
    (51) expresion -> . expresion MENEQUALS expresion
    (52) expresion -> . expresion MAYQ expresion
    (53) expresion -> . expresion MAYEQUALS expresion
    (54) expresion -> . expresion IGUALDAD expresion
    (55) expresion -> . expresion DIFERENCIA expresion
    (56) expresion -> . expresion AND expresion
    (57) expresion -> . expresion OR expresion
    (58) expresion -> . expresion COMA expresion
    (59) expresion -> . MENOS expresion
    (60) expresion -> . NOT expresion
    (61) expresion -> . PAROP expresion PARCLS
    (62) expresion -> . ENTERO
    (63) expresion -> . TK_TRUE
    (64) expresion -> . TK_FALSE
    (65) expresion -> . DECIMAL
    (66) expresion -> . ID
    (67) expresion -> . CADENA
    (68) expresion -> . CHAR

    MENOS           shift and go to state 28
    NOT             shift and go to state 29
    PAROP           shift and go to state 30
    ENTERO          shift and go to state 31
    TK_TRUE         shift and go to state 32
    TK_FALSE        shift and go to state 33
    DECIMAL         shift and go to state 34
    ID              shift and go to state 35
    CADENA          shift and go to state 36
    CHAR            shift and go to state 37

    expresion                      shift and go to state 44

state 26
